Add relative camera movements

--- a/webgl/public/index.html
+++ b/webgl/public/index.html
@@ -8,9 +8,9 @@
     <title>Starter Snowpack App</title>
   </head>
   <body>
-    <div id="canvasContainer">
+    <span id="canvasContainer" tabindex="1">
       <canvas id="glCanvas" width="1920" height="1080"> </canvas>
-    </div>
+    </span>
     <script type="module" src="./dist/index.js"></script>
   </body>
 </html>
