--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Starter Snowpack App" />
+    <meta name="description" content="WebGL Playground" />
     <link rel="stylesheet" type="text/css" href="/index.css" />
-    <title>Starter Snowpack App</title>
+    <title>WebGl Playground</title>
   </head>
   <body>
     <span id="canvasContainer" tabindex="1">
