--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,8 @@
   </head>
   <body>
     <span id="canvasContainer" tabindex="1">
-      <div style="display: flex">
-        <canvas id="glCanvas" width="1920" height="1080" style="margin: auto">
-        </canvas>
+      <div>
+        <canvas id="glCanvas" width="1920" height="1080"> </canvas>
       </div>
       <div id="menu">
         <button id="cyclic-attractor">
@@ -21,6 +20,24 @@
         <button id="bedhead-attractor">Bedhead Attractor</button>
         <button id="cube-grid">Cube Grid</button>
         <button id="cam-coord-button">Camera Coordinate System</button>
+        <button id="world-coord-button">World Coordinate System</button>
+        <div class="metrics-div" id="fps-display">
+          <p>FPS:</p>
+          <div class="padding-div"></div>
+          <p class="metrics-display" id="fps-display-p">0</p>
+        </div>
+        <div class="metrics-div" id="frametime-display">
+          <p>Frame time:</p>
+          <div class="padding-div"></div>
+          <p class="metrics-display" id="frametime-display-p">0</p>
+          <p>ms</p>
+        </div>
+        <div class="metrics-div" id="clocktime-display">
+          <p>Render Clock Period:</p>
+          <div class="padding-div"></div>
+          <p class="metrics-display" id="clocktime-display-p">0</p>
+          <p>ms</p>
+        </div>
       </div>
     </span>
     <script type="module" src="./dist/index.js"></script>
