--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,11 @@
         </button>
         <button id="lorenz-attractor">Lorenz Attractor</button>
         <button id="bedhead-attractor">Bedhead Attractor</button>
+        <button id="dadras-attractor">Dadras Attractor</button>
+        <button id="halvorsen-attractor">Halvorsen Attractor</button>
+        <button id="threescroll-attractor">Three-Scroll Attractor</button>
+        <button id="sprott-attractor">Sprott Attractor</button>
+        <button id="aizawa-attractor">Aizawa Attractor</button>
         <button id="cube-grid">Cube Grid</button>
         <button id="cam-coord-button">Camera Coordinate System</button>
         <button id="world-coord-button">World Coordinate System</button>
